# DrugReuseEngine

./: .env  .replit  DEPLOYMENT.md  Drug_Repurposing_Engine_Technical_Overview.md  EXPORT_INSTRUCTIONS.md  GITHUB_DEPLOYMENT.md  GITHUB_SETUP.md  Procfile  Procfile.streamlit  README.md  STREAMLIT_CLOUD_DEPLOYMENT.md  ai_analysis.py  animated_flow.py  app.py  caching.py  community_detection.py  cypher_query.py  data_ingestion.py  data_sources.py  db_migration.py  db_utils.py  export_button.py  export_utils.py  external_data_integration.py  gemini_analysis.py  graph_export.py  huggingface_analysis.py  interactive_3d_vis.py  knowledge_graph.py  load_env.py  migrate_candidates.py  migrate_data.py  migrate_relationships.py  neo4j_utils.py  one_click_export.py  open_targets_api.py  openai_analysis.py  pubchem_api.py  pyproject.toml  recommendation_engine.py  (+13 more)
.streamlit/: config.toml
api/: main.py
assets/: custom.css
attached_assets/: Pasted--Drug-Repurposing-Engine-A-comprehensive-computational-platform-for-identifying-and-evaluating-pot-1744153204163.txt  Pasted--How-It-Works-Data-Flow-The-Drug-Repurposing-Engine-processes-data-through-the-following-flo-1744155649995.txt  Pasted-1-Biomedical-Knowledge-APIs-These-provide-curated-biomedical-relationships-drug-gene-disease-UM-1744206906071.txt  Pasted-Community-Detection-Identify-clusters-or-communities-within-the-knowledge-graph-to-find-groups-of-d-1744323437104.txt  Pasted-Community-Detection-Identify-clusters-or-communities-within-the-knowledge-graph-to-find-groups-of-d-1744323773320.txt  (+10 more)
cache/: disease_search_ulcer.pkl  (+7 more)
(+26 files in other folders)
